Utilize collect instead of toList.